change icon, view width

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -74,24 +74,28 @@
 
         <EditText
             android:id="@+id/date"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:ems="10"
             android:hint="Add Date "
             android:inputType="number" />
 
         <EditText
             android:id="@+id/month"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:ems="10"
             android:hint="Add Month"
-            android:inputType="number" />
+            android:inputType="number"
+            android:paddingLeft="20dp" />
 
         <EditText
             android:id="@+id/year"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:ems="10"
             android:hint="Add Year"
             android:inputType="number" />
